--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Petar Traykov</title>
+    <title>Petar Trajkov</title>
     <link rel="shortcut icon" type="image/x-icon" href="smallicon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1">
